# hass-navirec

./: .devcontainer.json  .gitignore  .ruff.toml  CLAUDE.md  CONTRIBUTING.md  LICENSE  README.md  codecov.yaml  hacs.json  pyproject.toml
.github/ISSUE_TEMPLATE/: bug.yml  feature_request.yml
.github/workflows/: checks.yml  lint.yml  validate.yml
config/: configuration.yaml
custom_components/navirec/: __init__.py  api.py  binary_sensor.py  button.py  commands.py  config_flow.py  const.py  coordinator.py  data.py  device_tracker.py  entity.py  icons.json  manifest.json  models.py  sensor.py  services.py  services.yaml  switch.py
custom_components/navirec/translations/: en.json
docs/: navirec-api.md  openapi-navirec-1.45.0.json  specification.md
scripts/: develop  download_fixtures.py  generate_models.py
tests/: __init__.py  conftest.py  test_api.py  test_binary_sensor.py  test_button.py  test_commands.py  test_config_flow.py  test_const.py  test_coordinator.py  test_data.py  test_device_tracker.py  test_init.py  test_sensor.py  test_services.py
tests/fixtures/: accounts.json  actions.json  device_commands.json  drivers.json  interpretations.json  last_vehicle_states.json  sensors.json  stream_events.ndjson  vehicles.json
