[project]
name = "hass-navirec"
version = "0.1.5"
description = "A Home Assistant integration for Navirec"
readme = "README.md"
requires-python = ">=3.13.2"
authors = [
    { name = "lnagel", email = "lnagel@users.noreply.github.com" }
]
dependencies = [
    "colorlog>=6.10.1",
    "homeassistant>=2025.10.0",
]

[project.optional-dependencies]
test = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.20.0",
    "pytest-cov>=4.0.0",
    "pytest-homeassistant-custom-component>=0.13.285",
]
dev = [
    "ruff>=0.14.5",
    "ty>=0.0.1a11",
    "datamodel-code-generator>=0.26.0",
    "python-dotenv>=1.0.0",
    "bump-my-version>=1.1.0",
]

[project.urls]
Documentation = "https://github.com/lnagel/hass-navirec"
Repository = "https://github.com/lnagel/hass-navirec"
Issues = "https://github.com/lnagel/hass-navirec/issues"

[tool.uv]
package = false

[tool.black]
line-length = 88
target-version = ["py313"]
include = '\.pyi?$'
exclude = '''
/(
    \.git
  | build
  | dist

)/
'''

[tool.pytest.ini_options]
pythonpath = "."
asyncio_mode = "auto"
testpaths = ["tests"]
norecursedirs = [".git", "testing_config"]
asyncio_default_fixture_loop_scope = "function"

[tool.coverage.run]
source = ["custom_components/navirec"]
omit = ["custom_components/navirec/models.py"]

[tool.coverage.report]
fail_under = 80
exclude_lines = [
    "pragma: no cover",
    "if TYPE_CHECKING:",
]

[tool.ruff]
line-length = 88
target-version = "py313"

[tool.ruff.lint]
select = ["ALL"]
ignore = [
    "ANN401", # Dynamically typed expressions (typing.Any) are disallowed
    "D203", # no-blank-line-before-class (incompatible with formatter)
    "D212", # multi-line-summary-first-line (incompatible with formatter)
    "COM812", # incompatible with formatter
    "ISC001", # incompatible with formatter
]

[tool.ruff.lint.isort]
force-single-line = false
combine-as-imports = true

[tool.ruff.lint.per-file-ignores]
"tests/**" = [
    "S101", # Allow assert in tests
    "S106", # Allow hardcoded passwords in tests
    "ARG001", # Allow unused arguments in fixtures
    "PLR2004", # Allow magic values in tests
]

[tool.ty.environment]
python-version = "3.13"

[[tool.ty.overrides]]
# Auto-generated models use Pydantic constrained types (constr, conint)
# which are function calls and not valid static type expressions
include = ["custom_components/navirec/models.py"]

[tool.ty.overrides.rules]
"invalid-type-form" = "ignore"

[tool.bumpversion]
current_version = "0.1.5"
parse = "(?P<major>\\d+)\\.(?P<minor>\\d+)\\.(?P<patch>\\d+)"
serialize = ["{major}.{minor}.{patch}"]
commit = true
tag = true
tag_name = "v{new_version}"
pre_commit_hooks = ["uv lock && git add uv.lock"]

[[tool.bumpversion.files]]
filename = "pyproject.toml"
search = 'version = "{current_version}"'
replace = 'version = "{new_version}"'

[[tool.bumpversion.files]]
filename = "custom_components/navirec/manifest.json"
search = '"version": "{current_version}"'
replace = '"version": "{new_version}"'
